--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>ItzMatt019 - Home</title>
 	<!-- STYLES -->
+	<link rel="icon" type="image/x-icon" href="https://cdn.inphect.gg/i/nUNqaf3O.png">
 	<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200i,300,300i,400,400i,500,500i,600,700,700i,800&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -28,7 +29,7 @@
 	<!-- HERO -->
 	<div class="arlo_tm_hero" id="home">
 		<div class="background">
-			<div class="image" data-img-url="img/bg.png"></div>
+			<div class="image" data-img-url="img/background.png"></div>
 			<div class="overlay"></div>
 		</div>
 		<div class="content">
@@ -56,8 +57,8 @@
 				<div class="left">
 					<div class="about_image_wrap parallax" data-relative-input="true">
 						<div class="image layer" data-depth="0.1">
-							<<img src="img/logo.png" alt="" />
-							<div class="inner" data-img-url="img/logo.png"></div>
+							<img src="https://cdn.inphect.gg/i/sSwDmURK.png" alt="" />
+							<div class="inner" data-img-url="https://cdn.inphect.gg/i/sSwDmURK.png"></div>
 						</div>
 						<div class="border layer" data-depth="0.2">
 							<img src="img/logo.png" alt="" />
@@ -75,28 +76,22 @@
 					<div class="about_short_contact_wrap">
 						<ul>
 							<li>
-								<img class="svg" src="img/svg/gift.svg" alt="" />
+								<img class="svg" src="img/gift.svg" alt="" />
 								<span><label>Birthday:</label> March 21st, 2000</span>
 							</li>
 							<li>
-								<img class="svg" src="img/svg/location-1.svg" alt="" />
-								<span><label>Location:</label> <a class="href_location" href="#">California, USA</a></span>
+								<img class="svg" src="img/location-1.svg" alt="" />
+								<span><label>Location:</label> <a class="href_location" href="#">Fresno, CA, USA</a></span>
 							</li>
 							<li>
-								<img class="svg" src="img/svg/game-controller-2.svg" alt="" />
+								<img class="svg" src="img/game-controller-2.svg" alt="" />
 								<span><label>Interests:</label> Development, Coding, Gaming</span>
 							</li>
 							<li>
-								<img class="svg" src="img/svg/message-3.svg" alt="" />
+								<img class="svg" src="img/message-3.svg" alt="" />
 								<span><label>Email:</label> <a href="mailto:itzmatt019@gmail.com">itzmatt019&#64;gmail.com</a></span>
 							</li>
 						</ul>
-						
-						<div class="arlo_tm_button">
-							<a href="https://discord.gg/itzmatt019" download><span>Discord</span></a>
-							<a href="https://twitter.com/itzmatt019" download><span>Twitter</span></a>
-							<a href="https://youtube.com/ItzMatt0" download><span>YouTube</span></a>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -109,7 +104,7 @@
 			<div class="container">
 				<div class="inner">
 					<div class="copy wow fadeInLeft" data-wow-duration="1.5s">
-						<p> ItzMatt019 &copy; Copyright 2022. All rights are reserved.</p>
+						<p>ItzMatt019 &copy; Copyright 2022. All rights are reserved</p>
 					</div>
 				</div>
 			</div>
